docker/account-service-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.4.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: account-service
  name: account-service
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: account-service
    spec:
      containers:
      - image: localhost:5000/accountservice
        name: account-service
        ports:
        - containerPort: 8090
        resources: {}
      restartPolicy: Always
status: {}
