docker/api-gateway-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file ./docker-compose.yml convert
    kompose.version: 1.4.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: api-gateway
    spec:
      containers:
      - image: localhost:5000/gateway
        name: api-gateway
        ports:
        - containerPort: 8050
        resources: {}
      restartPolicy: Always
status: {}
