docker/metadata-service-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file ./docker-compose.yml convert
    kompose.version: 1.4.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: metadata-service
  name: metadata-service
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: metadata-service
    spec:
      containers:
      - image: localhost:5000/metadataservice
        name: metadata-service
        ports:
        - containerPort: 8190
        resources: {}
      restartPolicy: Always
status: {}
