docker/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file ./docker-compose.yml convert
    kompose.version: 1.4.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
spec:
  ports:
  - name: "8050"
    port: 8050
    targetPort: 8050
  selector:
    io.kompose.service: api-gateway
  type: LoadBalancer
status:
  loadBalancer: {}
