docker/metadata-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file ./docker-compose.yml convert
    kompose.version: 1.4.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: metadata-service
  name: metadata-service
spec:
  ports:
  - protocol: TCP
    port: 8190
    targetPort: 8190
  selector:
    io.kompose.service: metadata-service
  type: LoadBalancer
status:
  loadBalancer: {}
